--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -107,3 +107,13 @@ h1:before, .anchor:before {
     background-color: #00369f;
     font-size: .8em;
 }
+
+.conf-tag {
+  display: inline-block;
+  padding: 2px 8px;
+  margin-right: 6px;
+  font-size: 0.8em;
+  font-weight: 600;
+  color: #fff;
+  background-color: #02228e;
+}
